# igniter_js

./: .credo.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: elixir.yml  release.yml
config/: config.exs
lib/: igniter_js.ex
lib/igniter_js/: application.ex  helpers.ex  native.ex
lib/igniter_js/parsers/css/: formatter.ex  parser.ex
lib/igniter_js/parsers/javascript/: formatter.ex  parser.ex
native/igniter_js/: Cargo.toml  README.md
native/igniter_js/.cargo/: config.toml
native/igniter_js/src/: atoms.rs  helpers.rs  lib.rs
native/igniter_js/src/parsers/css/: ast.rs  formatter.rs  formatter_ex.rs  helpers.rs  mod.rs
native/igniter_js/src/parsers/javascript/: ast.rs  ast_ex.rs  ast_statistics.rs  formatter.rs  formatter_ex.rs  helpers.rs  mod.rs  phoenix.rs
test/: igniter_js_test.exs
test/assets/: errorImport.js  invalidAppWithRemovedImport.js  invalidAppWithoutHooksKey.js  invalidAppWithoutLiveSockerObject.js  invalidAppWithoutLiveSocket.js  validASTStatistics.js  validApp.js  validAppWithSomeHooksObjects.js
test/parsers/css/: formatter_test.exs
test/parsers/javascript/: formatter_test.exs  parser_test.exs
