[package]
name = "igniter_js"
version = "0.4.4"
authors = ["Shahryar Tavakkoli"]
edition = "2021"

[lib]
name = "igniter_js"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
swc_common = { version = "6.1.1", features = ["tty-emitter"] }
swc_ecma_parser = { version = "8.0.2" }
swc_ecma_visit = "6.0.0"
swc_ecma_ast = "6.1.0"
swc_ecma_codegen = "6.1.0"
rustler = "=0.36.1"
