[package]
name = "igniter_js"
version = "0.4.4"
authors = ["Shahryar Tavakkoli"]
edition = "2021"

[lib]
name = "igniter_js"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
swc_common = { version = "7.0.0", features = ["tty-emitter"] }
swc_ecma_parser = { version = "9.0.0" }
swc_ecma_visit = "7.0.0"
swc_ecma_ast = "7.0.0"
swc_ecma_codegen = "7.0.0"
rustler = "=0.36.1"
