[package]
name = "igniter_js"
version = "0.4.5"
authors = ["Shahryar Tavakkoli"]
edition = "2021"

[lib]
name = "igniter_js"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
swc_common = { version = "6.1.1", features = ["tty-emitter"] }
swc_ecma_parser = { version = "8.0.2" }
swc_ecma_visit = "6.0.0"
swc_ecma_ast = "6.1.0"
swc_ecma_codegen = "6.1.0"
rustler = "=0.36.1"

biome_console = "=0.5.7"
biome_deserialize = "=0.5.7"
biome_deserialize_macros = "=0.5.7"
biome_diagnostics = "=0.5.7"
biome_diagnostics_categories = "=0.5.7"
biome_diagnostics_macros = "=0.5.7"
biome_formatter = "=0.5.7"
biome_js_factory = "=0.5.7"
biome_js_formatter = "=0.5.7"
biome_js_parser = "=0.5.7"
biome_js_syntax = "=0.5.7"
biome_json_factory = "=0.5.7"
biome_json_parser = "=0.5.7"
biome_json_syntax = "=0.5.7"
biome_markup = "=0.5.7"
biome_parser = "=0.5.7"
biome_rowan = "=0.5.7"
biome_text_edit = "=0.5.7"
biome_text_size = "=0.5.7"
biome_unicode_table = "=0.5.7"
biome_css_formatter = "=0.5.7"
biome_css_parser = "=0.5.7"
biome_css_syntax = "=0.5.7"
biome_css_factory = "=0.5.7"
